update commit message

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "setup:db": "ts-node scripts/setup-db.ts",
+    "load-test:k6": "k6 run load-test.k6.js",
+    "load-test:artillery": "artillery run artillery.yml",
+    "deploy": "bash deploy.sh",
+    "deploy:vercel": "vercel deploy --prod"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -74,6 +79,10 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
     "zod": "^3.24.2"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
