--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # MongoDB
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/xmartycreator?retryWrites=true&w=majority
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/xmartycreator?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://xmartycreator:xmarty123@cluster0.kclupy4.mongodb.net/xmartydb?appName=Cluster0&retryWrites=true&w=majority&ssl=true
+MONGO_URI=mongodb+srv://xmartycreator:xmarty123@cluster0.kclupy4.mongodb.net/xmartydb?appName=Cluster0&retryWrites=true&w=majority&ssl=true
 
 # Redis/Upstash
 UPSTASH_REDIS_REST_URL="https://topical-gecko-37127.upstash.io"
