--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "deploy:vercel": "vercel deploy --prod"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.3.0",
+    "@ckeditor/ckeditor5-react": "^7.0.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -37,8 +39,6 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@ckeditor/ckeditor5-build-classic": "^43.3.0",
-    "@ckeditor/ckeditor5-react": "^7.0.0",
     "@tiptap/core": "^2.1.13",
     "@tiptap/extension-code-block-lowlight": "^2.1.13",
     "@tiptap/extension-highlight": "^2.1.13",
@@ -87,6 +87,7 @@
     "npm": ">=10.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
